<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_detail">Route Details</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_main">Nearby</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="empty_network_message">You are not connected to the internet!</string>
    <string name="empty_location_message">Location not found!</string>
    <string name="empty_default_message">No stops are nearby!</string>
    <string name="empty_server_message">No shuttle data is available.</string>

    <string name="snackbar_dismiss">Dismiss</string>
    <string name="button_center_string">Center</string>

    <string name="title_appearance">Appearance</string>
    <string name="title_checkbox_ad">Toggle Ads</string>
    <string name="title_theme">Theme</string>
    <string name="theme_dialog_title">Select app theme:</string>
    <string name="subtitle_checkbox_ad">Switch off to disable ads. Leave on to feed the lobster. Just kidding, do what you want. (•◡•) \nBut for realsies, invite your friends to install if you think the app is useful!</string>
    <string name="title_about">About</string>
    <string name="title_settings">Settings</string>
    <string name="title_libraries">Libraries Used</string>
    <string name="title_license">License</string>
    <string name="title_review">Rate this app!</string>
    <string name="subtitle_review">It\'s okay. I can handle your honesty.</string>

    <string name="title_og_light">Light with Route Colors</string>
    <string name="title_og_dark">Dark with Route Colors</string>
    <string name="title_theme_dark">Dark</string>
    <string name="title_theme_light">Light</string>

    <string name="key_theme_pref" translatable="false">pref_theme</string>
    <string name="key_ad_pref" translatable="false">pref_ad</string>
</resources>